<resources>
    <string name="app_name">Life Album</string>
    <string name="my_lifealbum">My LifeAlbum</string>
    <string name="memories">Memories</string>
    <string name="title">Title</string>
    <string name="colors">Colors</string>
    <string name="choose_color">Choose color</string>
    <string name="upload_image">Upload image</string>
    <string name="options">Options</string>
    <string name="delete_note">Delete note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note_button">Delete note</string>
    <string name="cancel">Cancel</string>
    <string name="look_for_memories">Look for memories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="look_for_people">Look for people</string>
    <string name="look_for_a_profile">Look for a profile</string>
    <string name="add_profile">ADD PROFILE</string>
    <string name="done">DONE</string>
    <string name="delete_profile">Delete profile</string>
    <string name="are_you_sure_you_want_to_delete_this_profile">Are you sure you want to delete this profile</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="people_in_this_note">People in this note:</string>
    <string name="note">Note</string>
    <string name="profile">Profile</string>
    <string name="this_profile_is_in_these_notes">This profile is in these notes:</string>
    <string name="save">SAVE</string>
    <string name="layout">Layout</string>
    <string name="layout_">Layout:</string>
    <string name="select_layout">Select layout:</string>
</resources>