<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageDeleteNote"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/infoDeleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/montserrat_regular"
        android:includeFontPadding="false"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/deleteButtonNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/delete_note_button"
        android:textColor="@color/delete"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoDeleteText"/>

    <TextView
        android:id="@+id/cancelButtonNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textColor="@color/note_color2"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteButtonNote"
        app:layout_constraintTop_toBottomOf="@id/infoDeleteText"/>



</androidx.constraintlayout.widget.ConstraintLayout>