<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <!-- tools:context=".fragments.FragmentHeader" -->

    <TextView
        android:id="@+id/textLifeAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/memories"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textLifeAlbum">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/look_for_memories"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>