<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutColors"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_colors_note"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textColor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/options"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/layoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/choose_color"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/icons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/upload_image"
            android:textColor="@color/icons"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addProfile"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_people"
            app:tint="@color/icons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/add_profile"
            android:textColor="@color/icons"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/delete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/delete_note"
            android:textColor="@color/delete"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>