<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateProfileActivity">

    <ScrollView
        android:id="@id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/noteLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibolditalic"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageDeleteProfile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/miscellaneousBackground" />

            <LinearLayout
                android:id="@+id/imageAndName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back">


                <ImageView
                    android:id="@+id/profileImageAdd"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_image" />


                <EditText
                    android:id="@+id/profileNameAdd"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="#9e9e9e"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/descriptionProfileAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:textColor="@color/black"
                android:textColorHint="#9e9e9e"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/dividerNote"
                app:layout_constraintTop_toBottomOf="@id/imageAndName" />

            <ImageView
                android:id="@+id/dividerNote"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/divider"
                app:layout_constraintTop_toBottomOf="@id/descriptionProfileAdd" />

            <TextView
                android:id="@+id/textNotesInProfileInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat_semibolditalic"
                android:includeFontPadding="false"
                android:text="@string/this_profile_is_in_these_notes"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerNote" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewNotes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textNotesInProfileInfo" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="691dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_profile_fab"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:text="@string/save"
        android:textColor="@color/white"
        app:backgroundTint="@color/miscellaneousBackground"
        app:icon="@drawable/ic_done"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>